# buildmode

./: .gitignore  .travis.yml  BuildMode.hpp  CMakeLists.txt  README.md  buildmode.hpp  runTests.sh  sonar-project.properties
tests/: .gitignore  DebugMode.cpp  ReleaseMode.cpp  baseCase.cpp  build.sh  debug_mode.cpp  release_mode.cpp  run.sh  setup.sh  shellcheck.sh  test_isDebug.cpp  test_isRelease.cpp
